update with sample code

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,4 @@
 #Thu Apr 11 00:19:09 EDT 2013
 compile.on.save=true
-user.properties.file=/home/taoobb/.netbeans/7.0/build.properties
+file.reference.phidget21.jar=C:\\Users\\taoo\\Documents\\phidget21.jar
+user.properties.file=C:\\Users\\taoo\\AppData\\Roaming\\NetBeans\\7.3\\build.properties
