--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -22,12 +22,16 @@ dist.jar=${dist.dir}/DISCO.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.phidget21.jar=/home/taoobb/Downloads/phidget21.jar
+file.reference.swing-layout-1.0.3.jar=/home/taoobb/Downloads/JavaJNI/lib/swing-layout-1.0.3.jar
+file.reference.swing-layout-1.0.4.jar=/home/taoobb/Downloads/JavaJNI/lib/swing-layout-1.0.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.swing-app-framework.classpath}:\
     ${libs.Phidget.classpath}:\
-    ${file.reference.phidget21.jar}
+    ${file.reference.phidget21.jar}:\
+    ${file.reference.swing-layout-1.0.3.jar}:\
+    ${file.reference.swing-layout-1.0.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
