--- a/src/disco/resources/DISCOView.properties
+++ b/src/disco/resources/DISCOView.properties
@@ -39,3 +39,4 @@ jButton4.text=Add Lesson
 jButton5.text=Export Result
 jLabel1.text=Number of choices
 jLabel2.text=Number of Reword
+jButton6.text=Save Result
